<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailContainer">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:inputType="textEmailAddress"
                android:hint="@string/new_account_email_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordContainer">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText"
                android:inputType="textPassword"
                android:hint="@string/new_account_password_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_account_password_data_hint"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/verifButton"
                android:text="@string/new_account_verif"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                style="?attr/borderlessButtonStyle"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>

        </LinearLayout>


        <TextView
            android:id="@+id/verifResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_check_green_24dp"
            android:drawablePadding="5dp"
            android:text="@string/new_account_add_check_valid"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:text="@string/action_account_add"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="right"
            style="?attr/borderlessButtonStyle"/>


    </LinearLayout>

</ScrollView>
