<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon_about"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/developedby_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_made"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/me_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_made_person"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/community_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/about_made_community"
        android:textAlignment="center"
        android:textSize="14sp"/>

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@color/colorDivider"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/using_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/about_thirdsparty"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold"/>



</LinearLayout>